use local properties in tomcat AND keep defaults in application.properties

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 # To let the tomcat installation have use local properties which are not in git
 # for sensitive values the values MUST NOT appear here because the only way to specify
 # the local property file is not able to override the values in application.properties
-#falc.account.db.name=accountH2create
-#falc.account.db.location=C:/Development/workspace_test/java/account/account.api/db
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#falc.account.db.cron=0 45 2 * * ?
-#falc.account.standingorder.cron=0 5 */4 * * ?
+falc.account.db.name=${local.falc.account.db.name:accountH2create}
+falc.account.db.location=${local.falc.account.db.location:./db}
+falc.account.db.usernamee=${local.falc.account.db.username:sa}
+falc.account.db..password=${local.falc.account.db.password:password}
+falc.account.db.cron=${local.falc.account.db.cron:0 45 2 * * ?}
+falc.account.standingorder.cron=${local.falc.account.standingorder.cron:0 5 */4 * * ?}
 
 falc.account.name=JAccount
 falc.account.db=H2
@@ -38,8 +38,9 @@ spring.jpa.properties.hibernate.show_sql=false
 # Seems I should have picked this PostgreSQL thing instead of H2 which really doesn't seem to work well with tomcat.
 # ;DB_CLOSE_DELAY=-1
 # ;FILE_LOCK=NO
+spring.datasource.username=${falc.account.db.username}
+spring.datasource.password=${falc.account.db.password}
 spring.datasource.url=jdbc:h2:file:${falc.account.db.location}/${falc.account.db.name};DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
-
 spring.datasource.name=accounth2db
 spring.datasource.driverClassName=org.h2.Driver
 
