--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -10,7 +10,7 @@ falc.account.standingorder.cron=${local.falc.account.standingorder.cron:0 5 */4 
 
 falc.account.name=JAccount
 falc.account.db=H2
-falc.account.version=0.5.1b
+falc.account.version=0.5.1c
 #   second
 #   minute
 #   hour
