--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # To let the tomcat installation have use local properties which are not in git
 # for sensitive values the values MUST NOT appear here because the only way to specify
 # the local property file is not able to override the values in application.properties
-falc.account.db.name=${local.falc.account.db.name:accountH2create}
-falc.account.db.location=${local.falc.account.db.location:./db}
-falc.account.db.usernamee=${local.falc.account.db.username:sa}
-falc.account.db..password=${local.falc.account.db.password:password}
+falc.account.db.name=${local.falc.account.db.name:accountH2}
+falc.account.db.location=${local.falc.account.db.location:C:/Development/accountDB/h2}
+falc.account.db.username=${local.falc.account.db.username:sa}
+falc.account.db.password=${local.falc.account.db.password:password}
 falc.account.db.cron=${local.falc.account.db.cron:0 45 2 * * ?}
 falc.account.standingorder.cron=${local.falc.account.standingorder.cron:0 5 */4 * * ?}
 
