--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -1,8 +1,11 @@
-# To let the tomcat installation have use local properties which are not in git
-# for sensitive values the values MUST NOT appear here because the only way to specify
-# the local property file is not able to override the values in application.properties
-falc.account.db.name=${local.falc.account.db.name:accountH2}
-falc.account.db.location=${local.falc.account.db.location:C:/Development/accountDB/h2}
+# To let the tomcat installation use local properties the properties MUST NOT be
+# set in application.properties as propertysource properties are overridden
+# by application.properties. Hence the 'real' values must be set to values
+# from the propertysource file using different names or set to a default if the
+# 'local' name is not defined
+falc.account.db.name=${local.falc.account.db.name:accountH2create}
+falc.account.db.location=${local.falc.account.db.location:./db}
+falc.account.db.backupdir=${local.falc.account.db.backupdir:${falc.account.db.location}}
 falc.account.db.username=${local.falc.account.db.username:sa}
 falc.account.db.password=${local.falc.account.db.password:password}
 falc.account.db.cron=${local.falc.account.db.cron:0 45 2 * * ?}
@@ -10,7 +13,7 @@ falc.account.standingorder.cron=${local.falc.account.standingorder.cron:0 5 */4 
 
 falc.account.name=JAccount
 falc.account.db=H2
-falc.account.version=0.5.1c
+falc.account.version=0.5.1
 #   second
 #   minute
 #   hour
