mysql db created and populated

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -3,17 +3,18 @@
 # by application.properties. Hence the 'real' values must be set to values
 # from the propertysource file using different names or set to a default if the
 # 'local' name is not defined
-falc.account.db.name=${local.falc.account.db.name:accountH2create}
-falc.account.db.location=${local.falc.account.db.location:./db}
-falc.account.db.backupdir=${local.falc.account.db.backupdir:${falc.account.db.location}}
-falc.account.db.username=${local.falc.account.db.username:sa}
-falc.account.db.password=${local.falc.account.db.password:password}
+falc.account.db.name=${local.falc.account.db.name:accountmysql}
+falc.account.db.location=${local.falc.account.db.location://berv8362:3306}
+falc.account.db.backupdir=${local.falc.account.db.backupdir:backup}
+falc.account.db.username=${local.falc.account.db.username:account}
+falc.account.db.password=${local.falc.account.db.password:Abcd1234}
 falc.account.db.cron=${local.falc.account.db.cron:0 45 2 * * ?}
+falc.account.db.connopts=
 falc.account.standingorder.cron=${local.falc.account.standingorder.cron:0 5 */4 * * ?}
 
 falc.account.name=JAccount
-falc.account.db=H2
-falc.account.version=0.5.1
+falc.account.db=MySQL
+falc.account.version=0.6.0a
 #   second
 #   minute
 #   hour
@@ -43,12 +44,14 @@ spring.jpa.properties.hibernate.show_sql=false
 # ;FILE_LOCK=NO
 spring.datasource.username=${falc.account.db.username}
 spring.datasource.password=${falc.account.db.password}
-spring.datasource.url=jdbc:h2:file:${falc.account.db.location}/${falc.account.db.name};DB_CLOSE_ON_EXIT=TRUE;AUTO_SERVER=TRUE
-spring.datasource.name=accounth2db
-spring.datasource.driverClassName=org.h2.Driver
 
-# tomcat crashes if this is not set - spring says it is not required as this is the default
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=jdbc:mysql:${falc.account.db.location}/${falc.account.db.name}${falc.account.db.connopts}
+spring.datasource.name=accountmysqldb
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+# spring crashes if this is not set - spring says it is not required as this is the default
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
 
 # never: prevents db init from data.sql
 spring.sql.init.mode=never
@@ -64,17 +67,17 @@ spring.jpa.generate-ddl=false
 # Finally got the H2 console - turns out '/h2-console' must be appended to 
 # the URL of the account web application
 # https://hostname:port/jaccountapi/h2-console
-spring.h2.console.settings.web-allow-others=true
-spring.h2.console.enabled=true
-server.port=8080
-server.servlet.context-path=
+#spring.h2.console.settings.web-allow-others=true
+#spring.h2.console.enabled=true
+#server.port=8080
+#server.servlet.context-path=
 
 
 # Below are settings used to try to workaround the Access DB from being closed while in use.
 # 
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 #spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
-
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=true
 
 # Try using the defaults for H2 db until some problem requires a modification
 # HikariPool-1 - Connection net.ucanaccess.jdbc.UcanaccessConnection@4e83a42f[C:\\Development\\accountDB\\acc2003_TEST.mdb] marked as broken because of SQLSTATE(08503), ErrorCode(-1353)
