--- a/account.api/pom.xml
+++ b/account.api/pom.xml
@@ -40,12 +40,10 @@
    </profiles>
    <dependencies>
       <dependency>
-         <groupId>com.h2database</groupId>
-         <artifactId>h2</artifactId>
-         <!-- version>${h2database.version}</version -->
-         <scope>runtime</scope>
+          <groupId>com.mysql</groupId>
+          <artifactId>mysql-connector-j</artifactId>
+          <version>8.4.0</version>
       </dependency>
-   
       <dependency>
          <groupId>io.nayuki</groupId>
          <artifactId>qrcodegen</artifactId>
