--- a/account.api/src/test/resources/application-h2create.properties
+++ b/account.api/src/test/resources/application-h2create.properties
@@ -3,7 +3,7 @@ falc.account.db.connopts=?allowLoadLocalInfile=true&createDatabaseIfNotExist=tru
 # 'update' should will preserve an existing file db, 
 # 'create-drop' is needed to repeatedly run tests which populate the DB.
 # 'never' should be the 'production' value to ensure the DB is not modified
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
