--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 # from the propertysource file using different names or set to a default if the
 # 'local' name is not defined
 falc.account.db.name=${local.falc.account.db.name:accountmysql}
-falc.account.db.location=${local.falc.account.db.location://berv8362:3306}
+falc.account.db.location=${local.falc.account.db.location://nasug:3306}
 falc.account.db.backupdir=${local.falc.account.db.backupdir:backup}
 falc.account.db.username=${local.falc.account.db.username:account}
 falc.account.db.password=${local.falc.account.db.password:Abcd1234}
