--- a/account.api/src/test/resources/application-h2create.properties
+++ b/account.api/src/test/resources/application-h2create.properties
@@ -1,6 +1,6 @@
 falc.account.db.connopts=?allowLoadLocalInfile=true&createDatabaseIfNotExist=true
 
-# 'update' should will preserve an existing file db, 
+# 'update' should preserve an existing file db, 
 # 'create-drop' is needed to repeatedly run tests which populate the DB.
 # 'never' should be the 'production' value to ensure the DB is not modified
 spring.jpa.hibernate.ddl-auto=create
