--- a/account.api/pom.xml
+++ b/account.api/pom.xml
@@ -48,7 +48,12 @@
          <groupId>io.nayuki</groupId>
          <artifactId>qrcodegen</artifactId>
          <version>1.5.0</version>
-      </dependency>         
+      </dependency>
+      <dependency>
+          <groupId>com.smattme</groupId>
+          <artifactId>mysql-backup4j</artifactId>
+          <version>1.3.0</version>
+      </dependency>
       <!-- https://mvnrepository.com/artifact/xalan/xalan -->
       <!-- Try to stop 'formContentFilter' when hot redeploying the app on tomcat. No idea why this is needed
            since spring supposedly has no dependencies on xalan yet still the 'org.apache.xalan.processor.TransformerFactoryImpl not found'
