test db is default, live must override

--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -3,11 +3,11 @@
 # by application.properties. Hence the 'real' values must be set to values
 # from the propertysource file using different names or set to a default if the
 # 'local' name is not defined
-falc.account.db.name=${local.falc.account.db.name:accountTEST}
-falc.account.db.location=${local.falc.account.db.location://localhost:3306}
+falc.account.db.name=${local.falc.account.db.name:testaccount}
+falc.account.db.location=${local.falc.account.db.location://nasug:3306}
 falc.account.db.backupdir=${local.falc.account.db.backupdir:backup}
-falc.account.db.username=${local.falc.account.db.username:user}
-falc.account.db.password=${local.falc.account.db.password:987654321}
+falc.account.db.username=${local.falc.account.db.username:testuser}
+falc.account.db.password=${local.falc.account.db.password:Qwer4321}
 falc.account.db.cron=${local.falc.account.db.cron:0 45 2 * * ?}
 falc.account.db.connopts=
 falc.account.standingorder.cron=${local.falc.account.standingorder.cron:0 5 */4 * * ?}
