--- a/account.api/pom.xml
+++ b/account.api/pom.xml
@@ -9,10 +9,10 @@
    <packaging>war</packaging>
    <name>Account API</name>
    <description>The backend server code for Account</description>
-  
+
    <!-- This sets all the Spring dependency version numbers so they don't need to be included here.
         Not really sure if having a parent which is not the root maven project will work but I don't
-        really want to have the entire project depending in spring, since the front end will have 
+        really want to have the entire project depending in spring, since the front end will have
         nothing to do with Spring
     -->
    <parent>
@@ -83,6 +83,12 @@
          <artifactId>spring-boot-starter-tomcat</artifactId>
          <scope>provided</scope>
       </dependency>
+      <dependency>
+         <groupId>com.h2database</groupId>
+         <artifactId>h2</artifactId>
+         <!-- version>${h2database.version}</version -->
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
    <build>
@@ -132,7 +138,7 @@
             </executions>
          </plugin>
          <plugin>
-            <artifactId>maven-war-plugin</artifactId>   
+            <artifactId>maven-war-plugin</artifactId>
             <!-- version>2.6</version -->
             <configuration>
                <failOnMissingWebXml>false</failOnMissingWebXml>
