--- a/account.api/src/test/resources/application-test.properties.template
+++ b/account.api/src/test/resources/application-test.properties.template
@@ -1,5 +1,18 @@
-# Might be interesting to configure this use an H2 memory db
-# so tests could be run 'anywhere', even on github codespaces
+# Tests use an H2 memory db they can be run 'anywhere', even on github codespaces
 
-spring.datasource.url=jdbc:ucanaccess://<full path to test db with forward slashed>
+falc.account.db.username=sa
+falc.account.db.password=password
+
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+
+spring.sql.init.platform=h2
+spring.sql.init.mode=always
+
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
+spring.datasource.name=testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# spring.datasource.url=jdbc:ucanaccess://<full path to test db with forward slashed>
 # eg. spring.datasource.url=jdbc:ucanaccess://E:/Development/workspace/accountrest/acc2003_TEST.mdb
