--- a/account.ui/package.json
+++ b/account.ui/package.json
@@ -10,18 +10,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.3",
-    "@angular/cdk": "^19.1.1",
-    "@angular/common": "^19.1.3",
-    "@angular/compiler": "^19.1.3",
-    "@angular/core": "^19.1.3",
-    "@angular/forms": "^19.1.3",
-    "@angular/material": "^19.1.1",
-    "@angular/platform-browser": "^19.1.3",
-    "@angular/platform-browser-dynamic": "^19.1.3",
-    "@angular/router": "^19.1.3",
+    "@angular/animations": "^21.0.1",
+    "@angular/cdk": "^21.0.1",
+    "@angular/common": "^21.0.1",
+    "@angular/compiler": "^21.0.1",
+    "@angular/core": "^21.0.1",
+    "@angular/forms": "^21.0.1",
+    "@angular/material": "^21.0.1",
+    "@angular/platform-browser": "^21.0.1",
+    "@angular/platform-browser-dynamic": "^21.0.1",
+    "@angular/router": "^21.0.1",
     "@fontsource-variable/roboto-flex": "^5.1.1",
-    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -29,16 +29,16 @@
     "html5-qrcode": "^2.2.1",
     "material-symbols": "^0.25.1",
     "ng-bootstrap": "^1.6.3",
-    "ngx-device-detector": "^9.0.0",
+    "ngx-device-detector": "^10.1.0",
     "rxjs": "~7.5.0",
     "sass": "^1.79.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.4",
-    "@angular/cli": "^19.1.4",
-    "@angular/compiler-cli": "^19.1.3",
+    "@angular/build": "^21.0.1",
+    "@angular/cli": "^21.0.1",
+    "@angular/compiler-cli": "^21.0.1",
     "@types/hammerjs": "^2.0.45",
     "@types/jasmine": "~2.8.8",
     "jasmine-core": "~2.99.1",
@@ -46,6 +46,6 @@
     "karma-chrome-launcher": "~3.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "typescript": "~5.7.3"
+    "typescript": "^5.9.3"
   }
 }
