--- a/account.api/src/main/resources/application.properties
+++ b/account.api/src/main/resources/application.properties
@@ -13,8 +13,8 @@ falc.account.db.connopts=
 falc.account.standingorder.cron=${local.falc.account.standingorder.cron:0 5 */4 * * ?}
 
 falc.account.name=JAccount
-falc.account.db=MySQL
-falc.account.version=0.6.1a
+falc.account.db=MySQL-ng21
+falc.account.version=0.6.2
 #   second
 #   minute
 #   hour
